--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/server": "^11.10.0",
+    "@mantine/carousel": "^5.10.2",
     "@mantine/core": "^5.10.1",
     "@mantine/dates": "4.2.5",
     "@mantine/form": "^5.10.1",
@@ -21,6 +22,7 @@
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "dayjs": "^1.11.7",
+    "embla-carousel-react": "^7.0.9",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.4",
     "next": "13.1.4",
