--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "embla-carousel-react": "^7.0.9",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.4",
+    "microcms-js-sdk": "^2.3.2",
     "next": "13.1.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
