--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@mantine/form": "^5.10.2",
     "@mantine/hooks": "^5.10.1",
     "@mantine/next": "^5.10.1",
+    "@mantine/notifications": "^5.10.2",
     "@next/font": "13.1.4",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "axios": "^1.2.6",
     "dayjs": "^1.11.7",
     "embla-carousel-react": "^7.0.9",
     "eslint": "8.32.0",
